Add workaround for GPU detection inside a Citrix remote session.

This CL extends the workaround to Citrix sessions (previously only pure RDP sessions were considered).

Note: I've tested this manually in our lab environment.

BUG=681063
TBR=zmo@chromium.org

Review-Url: https://codereview.chromium.org/2698273004
Cr-Commit-Position: refs/heads/master@{#452538}

Former-commit-id: e7b6ddf8b2940d17dc8dd0feaffce5b33ecee785